manifests/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
  namespace: radar-voluntario
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      name: react-app
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app-container
          imagePullPolicy: Always
          image: ghcr.io/antoniolago/radar-voluntario-frontend:dev-1697412709 # {"$imagepolicy": "flux-system:radar-voluntario-front-img-policy"}      
          ports:
            - containerPort: 80
              hostPort: 80
            - containerPort: 443
              hostPort: 443
          resources:
            limits:
              cpu: "0.2"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
