manifests/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: radar-voluntario
  # annotations:
    # kubernetes.io/ingress.class: "nginx"
    # oci.oraclecloud.com/load-balancer-type: "lb"
    # service.beta.kubernetes.io/oci-load-balancer-ssl-ports: "443"
    # service.beta.kubernetes.io/oci-load-balancer-tls-secret: radarvoluntario-tls-secret-production
    # service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    # service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "1"
    # service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
spec:
  selector:
    app: react-app
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 80
  type: ClusterIP # Use "LoadBalancer" for external access if your cluster supports it
