manifests/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: radar-voluntario
  annotations:
    # cert-manager.io/cluster-issuer: cert-manager-global
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-staging
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/use-regex: "true"
    
spec:
  tls:
    - hosts:
        - radarvoluntario.duckdns.org
      secretName: radarvoluntario-tls-secret-staging
  rules:
    - host: radarvoluntario.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: node-api-service
                port:
                  number: 80
