manifests/base/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
spec:
  rules:
    - host: REPLACE_WITH_CONFIGMAP_HOST # Replace with your domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80
